--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <table>
         <tr>
         <th>Training</th>
-        <td><a href="output_1.png"><img height="256" width="480" src="output_1.png"></a></td>
-        <td><a href="output_2.png"><img height="256" width="480" src="output_2.png"></a></td>
-        <td><a href="output_3.png"><img height="256" width="480" src="output_3.png"></a></td>
+        <td><a href="output_1.jpg"><img height="256" width="480" src="output_1.jpg"></a></td>
+        <td><a href="output_2.jpg"><img height="256" width="480" src="output_2.jpg"></a></td>
+        <td><a href="output_3.jpg"><img height="256" width="480" src="output_3.jpg"></a></td>
         </tr>
 
         <tr>
