--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
         <tr>
         <th>Testing</th>
-        <td><a href="output_4.png"><img height="256" width="480" src="output_4.png"></a></td>
-        <td><a href="output_5.png"><img height="256" width="480" src="output_5.png"></a></td>
-        <td><a href="output_6.png"><img height="256" width="480" src="output_6.png"></a></td>
+        <td><a href="output_4.jpg"><img height="256" width="480" src="output_4.jpg"></a></td>
+        <td><a href="output_5.jpg"><img height="256" width="480" src="output_5.jpg"></a></td>
+        <td><a href="output_6.jpg"><img height="256" width="480" src="output_6.jpg"></a></td>
         </tr>
     </table>
     <a href="render.html">render program</a>
